--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   min-height: 100vh;
   display: flex;
   justify-content: center;
-  padding: 20px 0;
+  padding: 20px 10px;
   background:  linear-gradient(0deg, #4ca1af, #c4e0e5);
   position: relative;
   font-family: 'Nunito Sans', sans-serif;
@@ -26,7 +26,7 @@ img {
   object-fit: cover;
 }
 .container {
-  width: 300px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -73,20 +73,7 @@ img {
   width: 50px;
 }
 
-.weather__icon {
-  height: 125px;
-  width: 100px;
-  width: 50%;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: 1s;
-}
 
-.weather__icon img {
-  width: 100%;
-}
 
 .weather {
   width: 100%;
@@ -94,7 +81,7 @@ img {
   margin-bottom: 20px;
   display: flex;
   flex-direction: column;
-  flex: 1 1 auto;
+  /* flex: 1 1 auto; */
   display: none;
 }
 
@@ -111,6 +98,21 @@ img {
   border-bottom: none;
   border-top: none;
 
+}
+
+.weather__icon {
+  height: 125px;
+  width: 100px;
+  width: 50%;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 1s;
+}
+
+.weather__icon img {
+  width: 100%;
 }
 
 .day {
